# sftp_to_afs

./: .dockerignore  .env.example  .releaserc  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
sftp_to_afs/: __main__.py
sftp_to_afs/client/: sftp_client.py
sftp_to_afs/logger/: logger.py
sftp_to_afs/scripts/: Entrypoint.sh
sftp_to_afs/utils/: set.py
