[tool.mypy]
strict = true

[tool.poetry]
name = "sftp_to_afs"
version = "0.1.0"
description = "Copy files from a SFTP server to an Azure File Share"
readme = "README.md"
packages = [{include = "sftp_to_afs"}]

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "^3.1.0"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
autopep8 = "^2.0.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
